Fix section group radius and spacing at media queries.

--- a/packages/aurora-elements/src/components/_section-group.scss
+++ b/packages/aurora-elements/src/components/_section-group.scss
@@ -1,13 +1,20 @@
-.section-group > .section.is-rounded {
-  border-radius: 0;
+.section-group {
+  @include block;
 }
 
-.section-group > .section.is-rounded:first-child {
-  border-bottom-left-radius: $border-radius * 2;
-  border-top-left-radius: $border-radius * 2;
-}
+@media all and (min-width: 960px) {
+  .section-group > .section {
+    border-radius: 0;
+    margin: 0;
+  }
 
-.section-group > .section.is-rounded:last-child {
-  border-bottom-right-radius: $border-radius * 2;
-  border-top-right-radius: $border-radius * 2;
+  .section-group > .section.is-rounded:first-child {
+    border-bottom-left-radius: $border-radius * 2;
+    border-top-left-radius: $border-radius * 2;
+  }
+
+  .section-group > .section.is-rounded:last-child {
+    border-bottom-right-radius: $border-radius * 2;
+    border-top-right-radius: $border-radius * 2;
+  }
 }
